<resources>
    <string name="app_name">Reactions</string>
    <string name="app_author">Manuel, manuel@mobiquos.cl</string>
    <string name="app_descripotion">Este proyecto es un piloto para evaluar la factibilidad de poder
        desarrollar dentro de Android una aplicacion que implemente un juego de reacciones.
        El celular da la instruccion y el usuario debe responder en un tiempo limitado para
        segueing avanzando.</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Splash Preferences -->
    <string name="splash_title">Duración Inicio</string>
    <string name="splash_description">Duracion de la pantalla de presentación</string>


</resources>